优化swag注释
